apps/leaven-vod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: leaven-vod
  namespace: leaven
  labels:
    app: leaven-vod
spec:
  selector:
    matchLabels:
      app: leaven-vod
  template:
    metadata:
      labels:
        app: leaven-vod
    spec:
      containers:
      - name: leaven-vod
        image: hyeonwoo5342/leaven-vod:7
        imagePullPolicy: Always
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: '300Mi'
            cpu: '150m'
        livenessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 35
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /
            port: 3000
          initialDelaySeconds: 30
          periodSeconds: 10
      imagePullSecrets:
      - name: dockerhub-secret
