apps/leaven-vod/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leaven-vod
  namespace: leaven
  labels:
    app: leaven-vod
spec:
  type: ClusterIP
  ports:
    - port: 3000
  selector:
    app: leaven-vod
