apps/leaven-vod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: leaven-vod-ingress
  namespace: leaven
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    # Nginx Sticky Session
    nginx.ingress.kubernetes.io/affinity: "cookie"
    nginx.ingress.kubernetes.io/session-cookie-hash: "sha1"
    nginx.ingress.kubernetes.io/session-cookie-name: "route"
spec:
  rules:
  - host: vod.leaven.team
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: leaven-vod
            port:
              number: 3000
